docs/7.56/md/abenddic_database_tables_techspec.md
---
title: "DDIC - Table-Dependent Technical Attributes of Database Tables"
description: |
  The following technical attributes are provided specifically for DDIC database tables. They define attributes of the physical database table and how the database interface is used for access. Apart from the table category and activation type, these technical settings constitute a standalone object a
version: "7.56"
category: "database"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_techspec.htm"
abapFile: "abenddic_database_tables_techspec.htm"
keywords: ["do", "if", "try", "class", "data", "abenddic", "database", "tables", "techspec"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Dictionary (DDIC)](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_dictionary.htm) →  [DDIC - Database Tables](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables.htm) →  [DDIC - Technical Attributes of Database Tables](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_tech.htm) → 

DDIC - Table-Dependent Technical Attributes of Database Tables

The following technical attributes are provided specifically for DDIC database tables. They define attributes of the physical database table and how the database interface is used for access. Apart from the table category and activation type, these technical settings constitute a standalone object and can be activated and transported separately from the table.

-   [Table category](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_tab_cat.htm)
-   [Data class](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_dat_type.htm)
-   [Size category](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_siz_cat.htm)
-   [Logging](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_protocol.htm)
-   [Table buffering](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_buffer.htm)
-   [Storage type](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_storage.htm)
-   [Load unit](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_load_unit.htm)
-   [Activation type](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_act_type.htm)

Hint

Certain combinations of technical properties are not useful. There are [ABAP Test Cockpit (ATC)](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_test_cockpit_glosry.htm "Glossary Entry") tests that report such combinations as errors.

Continue
[DDIC - Table Category of Database Tables](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_tab_cat.htm)
[DDIC - Data Class of Database Tables](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_dat_type.htm)
[DDIC - Size Category of Database Tables](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_siz_cat.htm)
[DDIC - Table Buffering of Database Tables](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_buffer.htm)
[DDIC - Logging Database Tables](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_protocol.htm)
[DDIC - Storage Type of Database Tables](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_storage.htm)
[DDIC - Load Unit of Database Tables](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_load_unit.htm)
[DDIC - Activation Type of Database Tables](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_database_tables_act_type.htm)